# xgboost-edu

./: .gitignore  README.md  pyproject.toml
xgboost_tutorial/gen_tutorials/: docs.toml  gen_docs.ipynb
xgboost_tutorial/gen_tutorials/data/: base_url.html  help.md
